kustomize/apps/whoami/prod/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-http-route
spec:
  parentRefs:
    - name: whoami-gateway
  hostnames:
    - "whoami.highglade.local"
  rules:
    - backendRefs:
        - name: whoamiv1
          port: 80
