kustomize/apps/whoami/prod/ingressroute-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`whoami.highglade.local`)
      services:
        - kind: Service
          name: whoamiv1
          port: 80
